--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   <script src="namespaces/geometriaRect.js"></script>
   <script src="namespaces/geometriaCirc.js"></script>
   <script src="namespaces/namespaces.js"></script>
-  <!-- <script src="modulos/modulos.js"></script> -->
-  
-  <script>
+  <!-- <script src="modulos/modulos.js"></script> -->  
+  <!-- <script>
     SystemJS.config({
       baseUrl: '/modulos',
       packages: {
@@ -27,9 +26,9 @@
           defaultJSExtension: true
         }
       }
-    })
-
+    })    
     SystemJS.import('./modulos/modulos.js')
-  </script>
+  </script> -->  
+  <script src="interfaces/interfaces.js"></script>
 </body>
 </html>
