--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeScript</title>
-</head>
-<body>
-  <script src="node_modules\systemjs\dist\system.js"></script>
-  <script src="introducao/basico.js"></script>
-  <script src="tipos/tipos.js"></script>
-  <script src="compilador/compilador.js"></script>
-  <script src="ecmascript/ecmascript.js"></script>
-  <script src="classes/classes.js"></script>
-  <script src="classes/desafio.js"></script>
-  <script src="namespaces/geometriaRect.js"></script>
-  <script src="namespaces/geometriaCirc.js"></script>
-  <script src="namespaces/namespaces.js"></script>
-  <!-- <script src="modulos/modulos.js"></script> -->  
-  <!-- <script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+      crossorigin="anonymous"
+    ></script>
+
+    <title>TypeScript</title>
+  </head>
+  <body>
+    <script src="node_modules\systemjs\dist\system.js"></script>
+    <script src="introducao/basico.js"></script>
+    <script src="tipos/tipos.js"></script>
+    <script src="compilador/compilador.js"></script>
+    <script src="ecmascript/ecmascript.js"></script>
+    <script src="classes/classes.js"></script>
+    <script src="classes/desafio.js"></script>
+    <script src="namespaces/geometriaRect.js"></script>
+    <script src="namespaces/geometriaCirc.js"></script>
+    <script src="namespaces/namespaces.js"></script>
+    <!-- <script src="modulos/modulos.js"></script> -->
+    <!-- <script>
     SystemJS.config({
       baseUrl: '/modulos',
       packages: {
@@ -28,9 +35,10 @@
       }
     })    
     SystemJS.import('./modulos/modulos.js')
-  </script> -->  
-  <script src="interfaces/interfaces.js"></script>
-  <script src="generics/generics.js"></script>
-  <script src="decorators/decorators.js"></script>
-</body>
+  </script> -->
+    <script src="interfaces/interfaces.js"></script>
+    <script src="generics/generics.js"></script>
+    <script src="decorators/decorators.js"></script>
+    <script src="bibliotecas/bibliotecas.js"></script>
+  </body>
 </html>
